--- a/minimalDark.less
+++ b/minimalDark.less
@@ -14,7 +14,7 @@ License URL: http://www.gnu.org/licenses/gpl-3.0.html
 @c-base1: #FFFFFF;
 @c-base2: #999999;
 @c-base3: #666666;
-@c-base4: #3c3f41; //bg
+@c-base4: #2F3336; //bg
 @c-base5: #313131;
 @c-base6: #000000;
 
