atualização + dark + violet

--- a/minimalDark.less
+++ b/minimalDark.less
@@ -12,10 +12,10 @@ License URL: http://www.gnu.org/licenses/gpl-3.0.html
 @cm: CodeMirror;
 
 @c-base1: #FFFFFF;
-@c-base2: #999999;
-@c-base3: #666666;
+@c-base2: #D5D5D5;
+@c-base3: #A2A2A2;
 @c-base4: #242729; //bg
-@c-base5: #313131;
+@c-base5: #AD53F2;
 @c-base6: #000000;
 
 @c-primary1: #00FCF6;
