--- a/minimalDark.less
+++ b/minimalDark.less
@@ -12,7 +12,7 @@ License URL: http://www.gnu.org/licenses/gpl-3.0.html
 @cm: CodeMirror;
 
 @c-base1: #FFFFFF;
-@c-base2: #D5D5D5;
+@c-base2: #FFFFFF;
 @c-base3: #A2A2A2;
 @c-base4: #242729; //bg
 @c-base5: #AD53F2;
