--- a/minimalDark.less
+++ b/minimalDark.less
@@ -12,8 +12,8 @@ License URL: http://www.gnu.org/licenses/gpl-3.0.html
 @cm: CodeMirror;
 
 @c-base1: #FFFFFF;
-@c-base2: #FFFFFF;
-@c-base3: #A2A2A2;
+@c-base2: #E1E1E1;
+@c-base3: #4EA153;
 @c-base4: #242729; //bg
 @c-base5: #AD53F2;
 @c-base6: #000000;
