--- a/minimalDark.less
+++ b/minimalDark.less
@@ -14,7 +14,7 @@ License URL: http://www.gnu.org/licenses/gpl-3.0.html
 @c-base1: #FFFFFF;
 @c-base2: #E1E1E1;
 @c-base3: #4EA153;
-@c-base4: #3c3f41; //bg
+@c-base4: #272727; //bg
 @c-base5: #AD53F2;
 @c-base6: #000000;
 
