--- a/minimalDark.less
+++ b/minimalDark.less
@@ -13,7 +13,7 @@ License URL: http://www.gnu.org/licenses/gpl-3.0.html
 
 @c-base1: #FFFFFF;
 @c-base2: #E1E1E1;
-@c-base3: #4EA153;
+@c-base3: #272727;
 @c-base4: #272727; //bg
 @c-base5: #AD53F2;
 @c-base6: #000000;
