--- a/minimalDark.less
+++ b/minimalDark.less
@@ -14,20 +14,20 @@ License URL: http://www.gnu.org/licenses/gpl-3.0.html
 @c-base1: #FFFFFF;
 @c-base2: #E1E1E1;
 @c-base3: #272727;
-@c-base4: #272727; //bg
+@c-base4: #3c3f41; //bg
 @c-base5: #AD53F2;
 @c-base6: #000000;
 
 @c-primary1: #00FCF6;
 @c-primary2: #00C8E9;
-@c-primary3: #3492C7;
+@c-primary3: #00A8FF;
 @c-primary4: #A2CDE5;
 @c-primary5: #552E56;
 
 @c-secundary1: #E4C388;
 @c-secundary2: #c5c300;
 @c-secundary3: #009584;
-@c-secundary4: #22d398;
+@c-secundary4: #0FF2A6;
 @c-secundary5: #e37000;
 
 @keyframes efeito {
