--- a/minimalDark.less
+++ b/minimalDark.less
@@ -13,14 +13,14 @@ License URL: http://www.gnu.org/licenses/gpl-3.0.html
 
 @c-base1: #FFFFFF;
 @c-base2: #E1E1E1;
-@c-base3: #272727;
+@c-base3: #A5A5A5;
 @c-base4: #3c3f41; //bg
 @c-base5: #AD53F2;
 @c-base6: #000000;
 
 @c-primary1: #00FCF6;
 @c-primary2: #00C8E9;
-@c-primary3: #00A8FF;
+@c-primary3: #00DCFF; 
 @c-primary4: #A2CDE5;
 @c-primary5: #552E56;
 
