--- a/minimalDark.less
+++ b/minimalDark.less
@@ -19,7 +19,7 @@ License URL: http://www.gnu.org/licenses/gpl-3.0.html
 @c-base6: #000000;
 
 @c-primary1: #00FCF6;
-@c-primary2: #00C8E9;
+@c-primary2: #C67BFF;
 @c-primary3: #00DCFF; 
 @c-primary4: #A2CDE5;
 @c-primary5: #552E56;
