--- a/minimalDark.less
+++ b/minimalDark.less
@@ -21,7 +21,7 @@ License URL: http://www.gnu.org/licenses/gpl-3.0.html
 @c-primary1: #00FCF6;
 @c-primary2: #C67BFF;
 @c-primary3: #00DCFF; 
-@c-primary4: #A2CDE5;
+@c-primary4: #C67BFF;
 @c-primary5: #552E56;
 
 @c-secundary1: #E4C388;
